--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/Import.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/Import.mxml
@@ -12,21 +12,21 @@
 
 	<mx:Script>
 		<![CDATA[
-		import generated.webservices.Export_applicationResultEvent;
-		import generated.webservices.Get_all_typesResultEvent;
-		import generated.webservices.List_applicationsResultEvent;
-
-		import mx.controls.Alert;
-		import mx.utils.StringUtil;
-
-		import net.vdombox.powerpack.Template;
-		import net.vdombox.powerpack.importation.ImportApp;
-		import net.vdombox.powerpack.lib.extendedapi.containers.SuperAlert;
-		import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
-		import net.vdombox.powerpack.managers.ConnectionManager;
-		import net.vdombox.powerpack.managers.ContextManager;
-		import net.vdombox.powerpack.managers.LanguageManager;
-		import net.vdombox.powerpack.managers.ProgressManager;
+			import generated.webservices.Export_applicationResultEvent;
+			import generated.webservices.Get_all_typesResultEvent;
+			import generated.webservices.List_applicationsResultEvent;
+			
+			import mx.controls.Alert;
+			import mx.utils.StringUtil;
+			
+			import net.vdombox.powerpack.Template;
+			import net.vdombox.powerpack.importation.ImportApp;
+			import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
+			import net.vdombox.powerpack.managers.ConnectionManager;
+			import net.vdombox.powerpack.managers.ContextManager;
+			import net.vdombox.powerpack.managers.LanguageManager;
+			import net.vdombox.powerpack.managers.ProgressManager;
+			import net.vdombox.powerpack.panel.popup.AlertPopup;
 
 		private static var _dialog : Import;
 		private var appsXML : XMLList;
@@ -198,7 +198,7 @@
 
 			if ( resultXML.Error.toString() == 'Error' )
 			{
-				SuperAlert.show( resultXML.Error );
+				AlertPopup.show( resultXML.Error );
 			}
 			else
 			{
@@ -231,7 +231,7 @@
 
 			if ( resultXML.Error.toString() == 'Error' )
 			{
-				SuperAlert.show( resultXML.Error );
+				AlertPopup.show( resultXML.Error );
 			}
 			else
 			{
@@ -285,7 +285,7 @@
 
 			if ( resultXML.Error.toString() == 'Error' )
 			{
-				SuperAlert.show( resultXML.Error );
+				AlertPopup.show( resultXML.Error );
 			}
 			else
 			{
