Installer properties : app path -> error string
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7677 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -244,7 +244,7 @@
 		{
 			if ( ContextManager.templates.length > 0 && currentTemplate.modified )
 			{
-				AlertPopup.show("Do you want to save file before exit? dfsgdfg fgfgfg fgfgf gfgfgf gfgfg fgfgf fggf gfgf", 
+				AlertPopup.show("Do you want to save file before exit?", 
 					LanguageManager.sentences['confirmation'], 
 					AlertPopup.YES | AlertPopup.NO | AlertPopup.CANCEL, 
 					Sprite(Application.application), 
