--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
@@ -353,7 +353,11 @@
 			
 			private function validateAppPath():void
 			{
-				build.enabled = selectedApplicationPathCorrect();
+				var validPath : Boolean = selectedApplicationPathCorrect();
+				
+				build.enabled = validPath;
+				
+				installerApplication.errorString = validPath ? null : "Error";
 			}
 			
 			private function selectedApplicationPathCorrect():Boolean
