--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -11,18 +11,8 @@
 			import net.vdombox.ide.modules.wysiwyg.view.components.TypesAccordionHeader;
 		]]>
 	</fx:Script>
-	<s:Group width="127" height="100%">
-
-		<mx:Accordion id="typesAccordion" width="100%" height="100%" 
-					  borderVisible="false"
-					  color="white"
-					  textRollOverColor="white" textSelectedColor="white"
-					  headerHeight="29"
-					  headerRenderer="{ new ClassFactory( TypesAccordionHeader ) }"
-					  headerStyleName="typesAccordionHeader" textAlign="center"
-					  verticalGap="0"/>
-		
-	</s:Group>
+	
+	<panels:ToolBoxPanel id="toolbox" width="127" height="100%" />
 		
 	<s:Rect width="5" height="100%">
 		<s:fill>
