--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/ResourceSelectorWindow.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/ResourceSelectorWindow.mxml
@@ -9,7 +9,7 @@
 			import mx.collections.ArrayList;
 			
 			import net.vdombox.ide.common.vo.ResourceVO;
-			import net.vdombox.ide.modules.tree.events.WindowEvent;
+			import net.vdombox.ide.common.events.WindowEvent;
 
 			[Bindable]
 			private var _resources : ArrayList;
