--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -3,7 +3,8 @@
 		 xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 creationComplete="creationCompleteHandler()" xmlns:components="net.vdombox.components.*">
+		 xmlns:components="net.vdombox.components.*"
+		 creationComplete="creationCompleteHandler()">
 
 	<fx:Script>
 		<![CDATA[
@@ -307,7 +308,12 @@
 				dispatchEvent( otpe );
 			}
 			
-			protected function objectsTree_creationCompleteHandler(event:FlexEvent):void
+			protected function image1_clickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new ObjectsTreePanelEvent( ObjectsTreePanelEvent.CREATE_NEW_CLICK ));
+			}
+			
+			protected function reationCompleteHandler(event:FlexEvent):void
 			{
 				// TODO Auto-generated method stub
 				
@@ -324,10 +330,12 @@
 		</s:fill>
 	</s:Rect>
 	
+	<mx:Image source="@Embed('assets/green_plus.png')" width="20" height="20" top="-25" right="10"
+			  click="image1_clickHandler(event)"/>
+	
 	<mx:Tree id="objectsTree" borderVisible="false" maxHorizontalScrollPosition="140" horizontalScrollPolicy="auto"
 			 dataProvider="{ _pages }" doubleClickEnabled="true" height="100%" labelField="@name" showRoot="true" width="100%"
-			 contentBackgroundAlpha="0" itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.ObjectTreePanelItemRenderer"
-			 creationComplete="objectsTree_creationCompleteHandler(event)"/>
+			 contentBackgroundAlpha="0" itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.ObjectTreePanelItemRenderer"/>
 	
 	
 </panels:PanelBase>
