--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ToolBoxPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ToolBoxPanel.mxml
@@ -4,9 +4,11 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300">
 	<fx:Script>
 		<![CDATA[
+			import mx.events.DragEvent;
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.vo.TypeVO;
+			import net.vdombox.ide.modules.wysiwyg.events.RendererDropEvent;
 			import net.vdombox.ide.modules.wysiwyg.view.components.TypesAccordionHeader;
 			import net.vdombox.ide.modules.wysiwyg.view.components.TypesCategory;
 			
@@ -111,6 +113,13 @@
 					}
 				}	
 			}
+			
+			
+			private function renderer_dropHandler( event: RendererDropEvent ) : void
+			{
+				
+			}
+			
 			
 			public function clearData() : void
 			{
