--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -14,6 +14,7 @@
 			import mx.core.UIComponent;
 			import mx.events.FlexEvent;
 			import mx.events.StateChangeEvent;
+			import mx.utils.DisplayUtil;
 			
 			import net.vdombox.ide.common.components.WorkAreaButton;
 			import net.vdombox.ide.common.interfaces.IVDOMObjectVO;
@@ -286,8 +287,13 @@
 			
 			private function mouseMoveOnPageRenderer( event : MouseEvent ) : void
 			{
-				strXWritten.text = "x: " + (event.stageX - 137).toString() + "px";
-				strYWritten.text = "y: " + (event.stageY - 179).toString() + "px";
+				var pt:Point = new Point(event.localX, event.localY);
+				pt = event.target.localToGlobal(pt);
+				
+				pt=renderer.dataGroup.globalToContent(pt);
+				
+				strXWritten.text = "x: " + pt.x.toString() + "px";
+				strYWritten.text = "y: " + pt.y.toString() + "px";
 			}
 			
 			public function set showLinking( value : Boolean ) : void
