--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -7,6 +7,7 @@
 		preinitialize="preinit()"
 		initialize="init()"
 		applicationComplete="show()"
+		creationComplete="creationCompleteHandler(event)"
 		xmlns:mx="http://www.adobe.com/2006/mxml"
 		xmlns:graph="net.vdombox.powerpack.graph.*"
 		xmlns:ui="net.vdombox.powerpack.lib.extendedapi.ui.*"
@@ -86,6 +87,7 @@
 			import mx.controls.Tree;
 			import mx.core.Application;
 			import mx.events.CloseEvent;
+			import mx.events.FlexEvent;
 			import mx.events.FlexNativeMenuEvent;
 			import mx.utils.StringUtil;
 			
@@ -116,6 +118,7 @@
 			import net.vdombox.powerpack.menu.MenuGeneral;
 			import net.vdombox.powerpack.panel.Console;
 			import net.vdombox.powerpack.panel.popup.AlertPopup;
+			import net.vdombox.powerpack.updater.BuilderUpdater;
 
 		//--------------------------------------------------------------------------
 		//
@@ -161,7 +164,7 @@
 		{
 			MenuGeneral.menu = flexNativeMenu;
 		}
-
+			
 		private function show() : void
 		{
 			pnl_problems.grid.addEventListener( MouseEvent.DOUBLE_CLICK, problemsDoubleClickHandler );
@@ -239,10 +242,15 @@
 			event.preventDefault();
 			exitApplication();
 		}
-
-		public function exitApplication( event : Event = null ) : void
+			
+		private function closeWithoutSaveHandler(event : Event):void
 		{
-			if ( ContextManager.templates.length > 0 && currentTemplate.modified )
+			exitApplication(null, false);
+		}
+
+		public function exitApplication( event : Event = null, askForSave : Boolean = true ) : void
+		{
+			if ( ContextManager.templates.length > 0 && currentTemplate.modified && askForSave)
 			{
 				AlertPopup.show("Do you want to save file before exit?", 
 					LanguageManager.sentences['confirmation'], 
@@ -1174,6 +1182,20 @@
 
 			ContextManager.templateStruct = null;
 		}
+		
+		private var builderUpdater : BuilderUpdater = new BuilderUpdater();
+		private function checkUpdate():void
+		{
+			builderUpdater.checkForUpdate();
+			
+		}
+		
+		protected function creationCompleteHandler(event:FlexEvent):void
+		{
+			addEventListener("closeWithoutSave", closeWithoutSaveHandler);
+			checkUpdate();
+		}
+				
 		]]>
 	</mx:Script>
 	<mx:VBox width="100%" height="100%">
