--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -18,6 +18,7 @@
 			import mx.resources.ResourceManager;
 			import mx.utils.ObjectProxy;
 			
+			import net.vdombox.ide.modules.events.events.EventsPanelEvent;
 			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMHScrollBarSkin;
 			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			
@@ -46,6 +47,11 @@
 			{
 				actionsList.scroller.verticalScrollBar.setStyle("skinClass", VDOMVScrollBarSkin );
 				actionsList.scroller.horizontalScrollBar.setStyle("skinClass", VDOMHScrollBarSkin );
+			}
+			
+			protected function createServerAction_clickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new EventsPanelEvent( EventsPanelEvent.CREATE_SERVER_ACTION_CLICK ) );
 			}
 			
 		]]>
@@ -126,6 +132,9 @@
 					 textAlign="left" verticalAlign="middle"
 					 maxDisplayedLines="1" fontSize="15" fontWeight="bold">
 			</s:Label>
+			
+			<mx:Image id="createServerAction" source="@Embed('assets/green_plus.png')" height="20" width="20" right="10" top="5" 
+					  click="createServerAction_clickHandler(event)"/>
 				
 			<s:Line top="0" width="100%">
 				<s:stroke>
