git-svn-id: http://svn.vdombox.ru/flextools/trunk@7701 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
@@ -6,6 +6,8 @@
 	
 	<mx:Script>
 		<![CDATA[
+			import net.vdombox.powerpack.panel.popup.Answers.AnswerCreator;
+			import net.vdombox.powerpack.panel.popup.Answers.Answer;
 			import mx.containers.Canvas;
 			import mx.controls.HRule;
 			import mx.controls.Image;
