dialog: params value
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7706 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
@@ -27,6 +27,8 @@
 			
 			private var _dataProvider : Array;
 			
+			public var context : Array;
+			
 			public function set dataProvider(value:Array):void
 			{
 				_dataProvider = QuestionParamsConvertor.convertToArrayOfLists(value);
@@ -45,7 +47,7 @@
 				var answer : Answer;
 				for each (var value : String in _dataProvider) 
 				{
-					answer = AnswerCreator.create( value );
+					answer = AnswerCreator.create( value, context );
 					answerBox.addChild( answer );
 				}
 			}
