dialog answer refactoring
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7711 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
@@ -6,8 +6,6 @@
 	
 	<mx:Script>
 		<![CDATA[
-			import net.vdombox.powerpack.panel.popup.Answers.AnswerCreator;
-			import net.vdombox.powerpack.panel.popup.Answers.Answer;
 			import mx.containers.Canvas;
 			import mx.controls.HRule;
 			import mx.controls.Image;
@@ -19,6 +17,8 @@
 			import net.vdombox.powerpack.control.BrowseButton;
 			import net.vdombox.powerpack.customize.skins.PopupBackgroundSkin;
 			import net.vdombox.powerpack.gen.parse.ListParser;
+			import net.vdombox.powerpack.panel.popup.Answers.Answer;
+			import net.vdombox.powerpack.panel.popup.Answers.AnswerCreator;
 			
 			[Bindable]
 			public var question : String = "";
@@ -45,9 +45,11 @@
 				}
 				
 				var answer : Answer;
-				for each (var value : String in _dataProvider) 
+				Answer.context = context;
+				
+				for each (var value : * in _dataProvider) 
 				{
-					answer = AnswerCreator.create( value, context );
+					answer = AnswerCreator.create( value);
 					answerBox.addChild( answer );
 				}
 			}
